fix: Fix field name too long

--- a/clients/portal/modules/apps-management/pages/form-design/page-setting/index.scss
+++ b/clients/portal/modules/apps-management/pages/form-design/page-setting/index.scss
@@ -30,8 +30,7 @@
   display: grid;
   align-items: center;
   grid-template-columns: 2fr 1fr;
-  padding: 0 16px;
-  height: 38px; 
+  padding: 8px 16px;
   border-bottom: 1px solid var(--gray-300);
 }
 
